# PAMSI_projekt2

./: CMakeLists.txt
inc/: dijkstra.h  graf.h  scena.h  testy.h
src/: dijkstra.cpp  graf.cpp  main.cpp  scena.cpp  testy.cpp
test/: CMakeLists.txt  TestMacierzObrotu.cpp  TestWektor.cpp
